<resources>
    <string name="app_name" translatable="false">SAlbum</string>

    <string name="app_activity_main_et_threshold_hint">Threshold</string>
    <string name="app_activity_main_et_span_count_hint">Span Count</string>

    <string name="app_activity_main_cb_picture">Picture</string>
    <string name="app_activity_main_cb_gif">Gif</string>
    <string name="app_activity_main_cb_video">Video</string>
    <string name="app_activity_main_cb_camera">Camera</string>
    <string name="app_activity_main_cb_crop">Crop</string>
    <string name="app_activity_main_cb_anim">Animation</string>
    <string name="activity_btn_launch">Launcher</string>
</resources>
