<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <EditText
            android:id="@+id/etAlbumThreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/app_activity_main_et_threshold_hint"
            android:inputType="number"
            android:padding="10dp"
            android:text="6"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <EditText
            android:id="@+id/etSpanCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/app_activity_main_et_span_count_hint"
            android:inputType="number"
            android:padding="10dp"
            android:text="3"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cbGif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_activity_main_cb_gif" />

        <CheckBox
            android:id="@+id/cbVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/app_activity_main_cb_video" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cbCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_activity_main_cb_camera" />

        <CheckBox
            android:id="@+id/cbCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/app_activity_main_cb_crop" />

        <CheckBox
            android:id="@+id/cbAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/app_activity_main_cb_anim" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLaunchAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/app_activity_main_launcher"
        android:gravity="center"
        android:text="@string/activity_btn_launch"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20dp" />

</LinearLayout>